css add style to fix tagit field display jumping around based on length of tags

--- a/public/css/hg-base.css
+++ b/public/css/hg-base.css
@@ -206,3 +206,7 @@ button.snippet-result {
 #selected_preset {
 	display: none;
 }
+/* fix display problem with tagit field on snippets page */
+#ent_key_container > ul {
+	width: 100%;
+}
